--- a/生日快乐.html
+++ b/生日快乐.html
@@ -198,7 +198,7 @@
         <!-- 音频元素，设置了id以便在JavaScript中引用 -->
         <audio id="myAudio">
             <!-- 指定音频文件的源和类型 -->
-            <source src="music.mp3" type="audio/mpeg">
+            <source src="http://m802.music.126.net/20250124122954/7efefd78d3b80ace248149ee16cb9e79/jd-musicrep-ts/fc07/570f/484b/b3cb898b008635c4f695ec639f296441.mp3?vuutv=XygdVy+K/5CKrdeDSuN7IxwpYiC5L9Z7h1/UHNRkN6RTCjqJ03PV5jnjFJqv0sbqlKgllo1V3ftSu4LjuxXZcbaZNmJ08z+XPRsjw2BHWHI=" type="audio/mpeg">
             <!-- 如果浏览器不支持音频元素，显示此提示信息 -->
             Your browser does not support the audio element.
         </audio>
