--- a/fpl_v1.2.html
+++ b/fpl_v1.2.html
@@ -204,7 +204,7 @@ A.info:hover    {color:green;background:transparent;text-decoration:underline}
         <td width="120"  height="125" ><a class="active" href="fpl_v1.2.html" >首页</a></td>
         <td width="120" ><a href="说说.html" >说说</a></td>
         <td width="120" ><a href="好友展示.html" >亲友录</a></td>
-        <td width="120"><a href="https://y.qq.com/n/ryqq/toplist/4" >音乐收藏</a></td>
+        <td width="120"><a href="音乐收藏.html" >音乐收藏</a></td>
         <td width="120"><a href="生日快乐.html" >生日贺卡</a></td>
         <td width="120"><a href="Photo.html" >相册欣赏</a></td>
         <td width="120"><a href="book.html" >在线留言</a></td>
