--- a/音乐收藏.html
+++ b/音乐收藏.html
@@ -77,9 +77,22 @@
 
 
     </style>
+     <style>
+        .btn-home {
+            display: block;
+            top:  05px;    /*设置距离顶部的位置  */
+            left: 2000px; /*设置距离左侧的位置 */
+            padding: 10px;
+            margin: 20px auto;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+     </style>
 </head>
 
 <body>
+    <a href="fpl_v1.2.html" class="btn-home">返回首页</a>
     </div>
     <!-- 显示当前播放歌曲 -->
     <div id="current-song">当前播放：无</div>
