--- a/音乐收藏.html
+++ b/音乐收藏.html
@@ -84,7 +84,7 @@
             left: 2000px; /*设置距离左侧的位置 */
             padding: 10px;
             margin: 20px auto;
-            color: white;
+            color: pink;
             text-decoration: none;
             border-radius: 5px;
         }
